WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281494
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-vert-002.html
https://bugs.webkit.org/show_bug.cgi?id=281494
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-vert-...
alan
Reported
2024-10-15 08:12:34 PDT
ssia
Attachments
[fast-cq]Patch
(3.14 KB, patch)
2024-10-15 08:15 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-15 08:15:50 PDT
Created
attachment 472937
[details]
[fast-cq]Patch
EWS
Comment 2
2024-10-15 11:48:57 PDT
Committed
285214@main
(b24f06967d43): <
https://commits.webkit.org/285214@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472937
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-10-15 11:49:17 PDT
<
rdar://problem/137978654
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug