[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-vert-002.html https://bugs.webkit.org/show_bug.cgi?id=281494

Reviewed by Antti Koivisto.

Now that the integration layer takes care of axis flip, cross axis works for both row and column directions.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::setFlexItemsGeometry):

Canonical link: https://commits.webkit.org/285214@main